// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/File Uploader Compact 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
  
    <div
      class="fd-file-uploader"
    >
      
      
      <input
        aria-label="Select a file for uploading"
        class="fd-input fd-input--compact fd-file-uploader__input"
        id="browse_input2"
        onclick="browseFile('input2');"
        placeholder="Choose a file for upload"
        readonly=""
        tabindex="-1"
        title="Select a file for uploading"
        type="text"
      />
      
      
      <button
        aria-label="Select a file for uploading"
        class="fd-button fd-button--compact fd-file-uploader__button"
        id="file-uploader-button-3"
        onclick="browseFile('input2');"
      >
        Browse...
      
      </button>
      
  
    </div>
    
  
    <input
      class="fd-file-uploader__hidden"
      id="input2"
      onchange="selectFile(this,'browse_input2')"
      type="file"
    />
    

  </div>
  


  <br />
  

  <br />
  

  <br />
  


  <div
    dir="rtl"
  >
    
  
    <h3>
      RTL Support
    </h3>
    
  
    <div
      class="fd-form-item"
    >
      
    
      <div
        class="fd-file-uploader"
      >
        
      
        <input
          aria-label="Select a file for uploading"
          class="fd-input fd-input--compact fd-file-uploader__input"
          id="browse_input2-rtl"
          onclick="browseFile('input2-rtl');"
          placeholder="Choose a file for upload to localserver"
          readonly=""
          tabindex="-1"
          title="Select a file for uploading"
          type="text"
        />
        
      
        <button
          aria-label="Select a file for uploading"
          class="fd-button fd-button--compact fd-file-uploader__button"
          id="file-uploader-button-4"
          onclick="browseFile('input2-rtl');"
        >
          Browse...
      
        </button>
        
    
      </div>
      
      
      <input
        class="fd-file-uploader__hidden"
        id="input2-rtl"
        onchange="selectFile(this,'browse_input2-rtl')"
        type="file"
      />
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/File Uploader Default 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
    
    <div
      class="fd-file-uploader"
    >
      
        
      <input
        aria-label="Select a file for uploading"
        aria-live="polite"
        autocomplete="off"
        class="fd-input fd-file-uploader__input"
        id="browse_input1"
        onclick="browseFile('input1');"
        placeholder=" Choose a file for upload"
        readonly=""
        tabindex="-1"
        title="Select a file for uploading"
        type="text"
      />
      
        
      <button
        aria-label="Select a file for uploading"
        class="fd-button"
        id="file-uploader-button-1"
        onclick="browseFile('input1');"
        tabindex="0"
      >
        Browse...
        
      </button>
      
    
    </div>
    
    
    <input
      class="fd-file-uploader__hidden"
      id="input1"
      onchange="selectFile(this,'browse_input1')"
      type="file"
    />
    

  </div>
  


  <br />
  

  <br />
  

  <br />
  


  <div
    dir="rtl"
  >
    
  
    <h3>
      RTL Support
    </h3>
    
  
    <div
      class="fd-form-item"
    >
      
      
      <div
        class="fd-file-uploader"
      >
        
          
        <input
          aria-label="Select a file for uploading"
          aria-live="polite"
          autocomplete="off"
          class="fd-input fd-file-uploader__input"
          id="browse_input1-rtl"
          onclick="browseFile('input1');"
          placeholder=" Choose a file for upload"
          readonly=""
          tabindex="-1"
          title="Select a file for uploading"
          type="text"
        />
        
          
        <button
          aria-label="Select a file for uploading"
          class="fd-button"
          id="file-uploader-button-2"
          onclick="browseFile('input1');"
          tabindex="0"
        >
          Browse...
          
        </button>
        
      
      </div>
      
      
      <input
        class="fd-file-uploader__hidden"
        id="input1-rtl"
        onchange="selectFile(this,'browse_input1-rtl')"
        type="file"
      />
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/FileUploader Compact 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
  
    <div
      class="fd-file-uploader"
    >
      
      
      <input
        aria-label="Select a file for uploading"
        class="fd-input fd-input--compact fd-file-uploader__input"
        id="browse_input2"
        onclick="browseFile('input2');"
        placeholder="Choose a file for upload"
        readonly=""
        tabindex="-1"
        title="Select a file for uploading"
        type="text"
      />
      
      
      <button
        aria-label="Select a file for uploading"
        class="fd-button fd-button--compact fd-file-uploader__button"
        id="file-uploader-button-3"
        onclick="browseFile('input2');"
      >
        Browse...
      
      </button>
      
  
    </div>
    
  
    <input
      class="fd-file-uploader__hidden"
      id="input2"
      onchange="selectFile(this,'browse_input2')"
      type="file"
    />
    

  </div>
  


  <br />
  

  <br />
  

  <br />
  


  <div
    dir="rtl"
  >
    
  
    <h3>
      RTL Support
    </h3>
    
  
    <div
      class="fd-form-item"
    >
      
    
      <div
        class="fd-file-uploader"
      >
        
      
        <input
          aria-label="Select a file for uploading"
          class="fd-input fd-input--compact fd-file-uploader__input"
          id="browse_input2-rtl"
          onclick="browseFile('input2-rtl');"
          placeholder="Choose a file for upload to localserver"
          readonly=""
          tabindex="-1"
          title="Select a file for uploading"
          type="text"
        />
        
      
        <button
          aria-label="Select a file for uploading"
          class="fd-button fd-button--compact fd-file-uploader__button"
          id="file-uploader-button-4"
          onclick="browseFile('input2-rtl');"
        >
          Browse...
      
        </button>
        
    
      </div>
      
      
      <input
        class="fd-file-uploader__hidden"
        id="input2-rtl"
        onchange="selectFile(this,'browse_input2-rtl')"
        type="file"
      />
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/FileUploader Default 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
    
    <div
      class="fd-file-uploader"
    >
      
        
      <input
        aria-label="Select a file for uploading"
        aria-live="polite"
        autocomplete="off"
        class="fd-input fd-file-uploader__input"
        id="browse_input1"
        onclick="browseFile('input1');"
        placeholder=" Choose a file for upload"
        readonly=""
        tabindex="-1"
        title="Select a file for uploading"
        type="text"
      />
      
        
      <button
        aria-label="Select a file for uploading"
        class="fd-button"
        id="file-uploader-button-1"
        onclick="browseFile('input1');"
        tabindex="0"
      >
        Browse...
        
      </button>
      
    
    </div>
    
    
    <input
      class="fd-file-uploader__hidden"
      id="input1"
      onchange="selectFile(this,'browse_input1')"
      type="file"
    />
    

  </div>
  


  <br />
  

  <br />
  

  <br />
  


  <div
    dir="rtl"
  >
    
  
    <h3>
      RTL Support
    </h3>
    
  
    <div
      class="fd-form-item"
    >
      
      
      <div
        class="fd-file-uploader"
      >
        
          
        <input
          aria-label="Select a file for uploading"
          aria-live="polite"
          autocomplete="off"
          class="fd-input fd-file-uploader__input"
          id="browse_input1-rtl"
          onclick="browseFile('input1');"
          placeholder=" Choose a file for upload"
          readonly=""
          tabindex="-1"
          title="Select a file for uploading"
          type="text"
        />
        
          
        <button
          aria-label="Select a file for uploading"
          class="fd-button"
          id="file-uploader-button-2"
          onclick="browseFile('input1');"
          tabindex="0"
        >
          Browse...
          
        </button>
        
      
      </div>
      
      
      <input
        class="fd-file-uploader__hidden"
        id="input1-rtl"
        onchange="selectFile(this,'browse_input1-rtl')"
        type="file"
      />
      
  
    </div>
    

  </div>
  

</section>
`;
